other/res/restrict-controlplane-scheduling/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-controlplane-scheduling
policies:
- ../restrict-controlplane-scheduling.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: restrict-controlplane-scheduling
  resources:
  - default/myapp-pod-2
  result: fail
  rule: restrict-controlplane-scheduling-control-plane
- kind: Pod
  policy: restrict-controlplane-scheduling
  resources:
  - default/myapp-pod-1
  result: pass
  rule: restrict-controlplane-scheduling-control-plane
- kind: Pod
  policy: restrict-controlplane-scheduling
  resources:
  - default/myapp-pod-1
  result: fail
  rule: restrict-controlplane-scheduling-master
- kind: Pod
  policy: restrict-controlplane-scheduling
  resources:
  - default/myapp-pod-2
  result: pass
  rule: restrict-controlplane-scheduling-master
